fixed padding on mobile for more responsive design

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@
 }
 
 @layer base {
+  * {
+  box-sizing: border-box;
+  max-width: 100%;
+}
   html {
     font-family: 'DM Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
